<?xml version="1.0"?>
<package format="3">
  <name>cali</name>
  <version>0.0.1</version>
  <description>The cali package for camera calibration, LiDAR integration, and YOLO inference.</description>

  <!-- Maintainer information -->
  <maintainer email="heemin0617@gmail.com">jinho</maintainer>

  <!-- License -->
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>ultralytics</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

